@@ -70,7 +70,7 @@ public class PlanNodeStepJUnitRunner extends PlanNodeJUnitRunner {
      */
     @Override
     protected List<PlanNodeRunner> createChildren() {
-        List<PlanNode> childNodes = getNode().children().collect(Collectors.toList());
+        List<PlanNode> childNodes = getNode().children().toList();
         return IntStream.range(0, childNodes.size())
                 .mapToObj(index -> {
                     PlanNode child = childNodes.get(index);
